--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "MyWebSite",
-  "short_name": "MySite",
+  "name": "Gogue",
+  "short_name": "Gogue",
   "icons": [
     {
       "src": "/web-app-manifest-192x192.png",
