--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "hls.js": "^1.6.7",
     "next": "15.3.2",
     "react": "^19.0.0",
