--- a/package.json
+++ b/package.json
@@ -10,16 +10,15 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
-    "hls.js": "^1.6.7",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-player": "^3.3.1",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/hls.js": "^0.13.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
