--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mux/mux-audio": "^0.15.11",
     "@vercel/analytics": "^1.5.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-player": "^3.3.1",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
