Refactor Player component to replace mux-audio with hls-video-element and media-chrome for enhanced audio playback. Update package dependencies by removing @mux/mux-audio and adding hls-video-element and media-chrome. Modify LecturePage to pass color prop for improved styling. Update package.json and package-lock.json accordingly.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mux/mux-audio": "^0.15.11",
     "@vercel/analytics": "^1.5.0",
+    "hls-video-element": "^1.0.0",
+    "media-chrome": "^4.0.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
