--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vercel/analytics": "^1.5.0",
     "hls-video-element": "^1.0.0",
     "media-chrome": "^4.0.0",
+    "mongodb": "^6.18.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
