--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@segment/analytics-node": "^2.3.0",
     "@vercel/analytics": "^1.5.0",
     "hls-video-element": "^1.0.0",
     "media-chrome": "^4.0.0",
